# titan-takehome

./: .gitignore  Makefile  README.md  SPEC.md  prompt-log.md  pyproject.toml
.claude/: log-assistant.sh  settings.json
configs/: baseline-no-curation.yaml  config2.yaml  default.yaml  refusal_prompts.yaml
src/titan/: config.py  inference.py  seed.py  serve.py  tracking.py  train.py
src/titan/eval/: metrics.py  refusal.py  run.py
